libs/@local/hashql/ast/tests/ui/lowering/import-resolver/unresolver-variable.jsonc
//@ run: fail
//@ description: Tests that unresolved variables have specialized error messages
[
  "use",
  "::math",
  { "#struct": { "add": "fooo" } },
  [
    "let",
    "foo",
    { "#literal": 42 },
    "föo"
    //~^ ERROR Cannot find variable 'föo'
  ]
]
